# chiefly

./: .env.example  .gitignore  Makefile  README.md  Taskfile.yml  alembic.ini  pyproject.toml
.github/: copilot-instructions.md
.sisyphus/evidence/: task-1-migration-apply.txt  task-1-model-tests.txt  task-2-deps-install.txt
apps/admin/: main.py
apps/api/: config.py  dependencies.py  logging.py  main.py
apps/miniapp/: index.html  tsconfig.tsbuildinfo  vite.config.ts
core/domain/: entities.py  enums.py  exceptions.py  legacy_state_machine.py  notes_codec.py  state_machine.py
core/schemas/: admin.py  api.py  llm.py  telegram.py
core/utils/: datetime.py  ids.py  text.py
db/: session.py
db/migrations/: env.py
db/models/: __init__.py  app_setting.py  daily_review_snapshot.py  processing_lock.py  project.py  project_alias.py  project_prompt_version.py  source_task.py  system_event.py  task_item.py  task_processing_log.py  task_processing_queue.py  task_record.py  task_revision.py  task_snapshot.py  telegram_review_session.py
db/repositories/: app_setting_repo.py  daily_review_repo.py  lock_repo.py  processing_queue_repo.py  (+10 more)
docs/: ADMIN_PANEL_CONTRACT.md  AGENT_TASK_TEMPLATE.md  ARCHITECTURE_CONTRACT.md  ARCHITECTURE_STATUS_REPORT.md  DATA_CONTRACT.md  DEPLOYMENT.md  HOT_RELOAD.md  IMPLEMENTATION_SEQUENCE.md  LLM_CONTRACT.md  OPERATIONAL_RULES.md  PRODUCT_CONTRACT.md  REVIEW_CHECKLIST.md  TASK_CHANGE_MONITORING.md  TELEGRAM_UX_CONTRACT.md  TESTING_CONTRACT.md
scripts/: auth_tasks.py  seed_projects.py  setup_github_models.py
tests/: conftest.py
(+197 files in other folders)
